--- a/examples/helloworld-ui/templates/index.html
+++ b/examples/helloworld-ui/templates/index.html
@@ -15,24 +15,76 @@
 -->
 <html>
   <head>
-    <title>Hello World</title>
+    <title>Hello World Guesbook</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+    <style>
+      body { padding-top: 80px; }
+      form span { font-weight: bold; padding-right: 1em; display: block; }
+      form input[type="submit"] { display: block; margin-top: 1em; }
+      .greeting { padding-bottom: 0.5em; }
+      .messages { border-top: 1px solid black }
+      .message { display: block; }
+      .message span { padding-top: 0.5em; }
+      .message .username { font-weight: bold; width: 100px; float: left;}
+    </style>
   </head>
   <body>
-    <div th:if="${greeting != null}">
-      <strong>Service Greeting:</strong> <span th:text="${greeting.greeting}"/><br/>
-      <strong>Service Host Name:</strong> <span th:text="${greeting.hostname}"/><br/>
-      <strong>Service Version:</strong> <span th:text="${greeting.version}"/><br/>
-    </div>
-    <div>
-      <form action="/greet" method="get">
-        <strong>Your name:</strong> <input type="text" name="name" value =""/>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Guestbook</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="main container">
+    <div class="input">
+      <form action="/greet" method="post">
+        <span>Your name:</span><input type="text" name="name" th:value="${name}"/>
+        <span>Message:</span><input type="text" name="message"/>
         <input type="submit" value="Greet!"/>
       </form>
     </div>
-    <div>
-      <br/>
-      <strong>UI Session ID:</strong> <span th:text="${ui.sessionId}"/><br/>
-      <strong>UI Host Name:</strong> <span th:text="${ui.hostname}"/>
+
+    <div th:if="${greeting != null}" class="greeting">
+      <span th:text="${greeting.greeting}">Greeting</span>
     </div>
+    <!--
+    <div th:if="${greeting != null}" class="greeting">
+      <strong>Service Greeting:</strong><span th:text="${greeting.greeting}">Greeting</span>
+      <strong>Service Host Name:</strong><span th:text="${greeting.hostname}">localhost</span>
+      <strong>Service Version:</strong><span th:text="${greeting.version}">1.0</span>
+    </div>
+    <div class="session">
+      <strong>UI Session ID:</strong><span th:text="${ui.sessionId}">jldsjflasdfjsadf</span>
+      <strong>UI Host Name:</strong><span th:text="${ui.hostname}">localhost</span>
+    </div>
+    -->
+
+    <div class="messages">
+      <div th:each="message: ${messages}" class="message">
+        <span th:text="${message.username}" class="username">Username</span>
+        <span th:text="${message.message}" class="message">Message</span>
+      </div>
+    </div>
+
+    </div>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
   </body>
 </html>
