Fix misspelling of Guestbook

--- a/examples/helloworld-ui/templates/index.html
+++ b/examples/helloworld-ui/templates/index.html
@@ -15,7 +15,7 @@
 -->
 <html>
   <head>
-    <title>Hello World Guesbook</title>
+    <title>Hello World Guestbook</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
     <meta charset="utf-8"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
