--- a/examples/helloworld-ui/templates/index.html
+++ b/examples/helloworld-ui/templates/index.html
@@ -20,7 +20,7 @@
     <meta charset="utf-8"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
     <style>
-      body { padding-top: 80px; }
+      body { padding-top: 80px; background-color: blue; }
       form span { font-weight: bold; padding-right: 1em; display: block; }
       form input[type="submit"] { display: block; margin-top: 1em; }
       .greeting { padding-bottom: 0.5em; }
